Uppangala 0.1.9043 June 2018 June reorganisation

Uppangala 0.1.9043 June 2018 pre-reorganisation push

Uppangala 0.1.9042 January 2018 Tabebuia 2nd run result

Uppangala 0.1.9041 January 2018 Tabebuia 2nd run

Uppangala 0.1.9040 January 2018 draft results

Uppangala 0.1.9039 January 2018 Tabebuia run

Uppangala 0.1.9038 first draft after PhD beginning (NM1, 2 et 3)

Uppangala 0.1.9037 draft mrm version

Uppangala 0.1.9036 Montpellier manuscript first changes version

Uppangala 0.1.9035 Internship end

Uppangala 0.1.9034 Corrected strata beta results

Uppangala 0.1.9033 New Strata Pelissier, 30*30, CWM SES

Uppangala 0.1.9032 Corrected Strata and 30*30m2 analysis

Uppangala 0.1.9031 Strata analysis + regression_table.R

Uppangala 0.1.9030 Maxime version

Uppangala 0.1.9029 Corrected intro

Uppangala 0.1.9028 Intro + Schema discussion

Uppangala 0.1.9027 LDMC ~ Canopy

Uppangala 0.1.9026 Intro beginning

Uppangala 0.1.9025 Discussion ~v1

Uppangala 0.1.9024 M&M + Results v1

Uppangala 0.1.9023 Mantel results and Ist NM3

Uppangala 0.1.9022 New data, BA corrected and Mantel beginning

Uppangala 0.1.9021 Pre tree data changes

Uppangala 0.1.9020 Draft with CWM & CVNND

Uppangala 0.1.9019 Removing BIOMASS NAMESPACES + genTrees

Uppangala 0.1.9018 Pres + Francois cleaning

Uppangala 0.1.9017 RLQ.Rmd + plan

Uppangala 0.1.9016 RLQ.Rmd + cosaspect fix

Uppangala 0.1.9015 Add cosaspect DEMderiv.R #AV

Uppangala 0.1.9014 Article draft beginning

Uppangala 0.1.9013 FD, all null models, and result tables, and tree heights

Uppangala 0.1.9012 CWT.R, null_model.R, RLQ, SAC, PhyloS, CWV, SEM

Uppangala 0.1.9011 Doc reorganization

Uppangala 0.1.9010 PreliminaryResults Environmental filters + Interpretations

Uppangala 0.1.9009 PreliminaryResults.Rmd Abiotic -> Biotic factors

Uppangala 0.1.9008 README + Presentation final

Uppangala 0.1.9007 Presentation

Uppangala 0.1.9006 Francois CR first version

Uppangala 0.1.9005 regression_table & PreliminaryResults 1st version
